# libaccounts-glib

./: .editorconfig  .gitignore  .gitlab-ci.yml  COPYING  Makefile.am  NEWS  README.md  accounts-backup  accounts-restore  configure.ac  libaccounts-glib.pc.in  meson.build  meson_options.txt
data/: accounts-provider.dtd  meson.build
debian/: .gitignore  api  changelog  control  copyright  libaccounts-glib-dev.install  libaccounts-glib-doc.install  libaccounts-glib-doc.links  libaccounts-glib-tools.install  libaccounts-glib0-test.aegis  libaccounts-glib0-test.install  libaccounts-glib0-test.substvars  libaccounts-glib0.aegis  libaccounts-glib0.install  rules
docs/: Makefile.am
docs/reference/: Makefile.am  libaccounts-glib-docs.sgml  libaccounts-glib-docs.xml  meson.build
libaccounts-glib/: Makefile.am  account-item.c  account-item.h  account-manager.c  account-manager.h  accounts-glib.h  ag-account-service.c  ag-account.c  ag-account.h  ag-application.c  ag-application.h  ag-auth-data.h  ag-autocleanups.h  ag-errors.h  ag-internals.h  ag-manager.c  ag-manager.h  ag-marshal.list  ag-provider.c  ag-provider.h  ag-service-type.c  ag-service-type.h  ag-service.c  ag-service.h  ag-types.h  ag-util.c  ag-util.h  libaccounts-glib.h  libaccounts-glib.pc.in  meson.build
libaccounts-glib/pygobject/: meson.build
tests/: Makefile.am  MyService.service  OtherService.service  check_ag.c  meson.build  test-process.c
tests/data/accounts/providers/: MyProvider.provider
tools/: Makefile.am  backup.c  main.c  meson.build
